--- a/jQuery/ajax.html
+++ b/jQuery/ajax.html
@@ -13,15 +13,61 @@
     <div id="app"></div>
     <script>
         /*
+            ajax에 대응
+            $ajax('',{
+                //method, default : get
+                type : '',  method 가 아닌 type
+                contentType : '',
+                //contentType : 서버로 전송할 데이터로 default : application/x-www-form-urlencoded
+                //Json : application/json
+                data : {}  data 에 들어갈 타입은 반드시 객체
+                //data : 서버로 전송할 데이터 -> object => queryString
+                beforeSend : function(xhr){  //beforeSend : 통신을 일으키기 직전에 추가적인 작업이 필요한 경우 여기에 정의한다. 가장 대표적인 ex : 토큰 
 
+                }
+            })
+            .done(result => console.log(result)); //통신이 성공한 경우
+            .done(result => console.log(result)); done 은 원하는 만큼 추가 가능.
+            .fail(err => console.log(err));
 
         */
+       //전체조회
         $.ajax('http://localhost:8080/app/emps')
             .done(result => {
-                console.log(result);
+                console.log('All List', result);
             })
             .fail(err =>
                 console.log(err));
+        // new Promise((resolve, reject)=>{});
+        //단건조회
+        $.ajax('http://localhost:8080/app/emps/100')
+            .done(result => {
+                console.log('Emp Info', result);
+            })
+            .fail(err =>
+                console.log(err));
+
+        //등록
+        let info = {
+            lastName : 'Ann',
+            email : 'ann3142342342@naver.com', //unique 제약조건
+            hireDate : '2024-01-18',  //yyyy-MM-dd
+            jobId : 'IT_PROG', //foreign key
+            salary : 1000
+        }
+        $.ajax('http://localhost:8080/app/emps', {
+            type : 'post',
+            contentType : 'application/json',
+            data : JSON.stringify(info)
+        })
+        .done(result => {
+                console.log('Emp Insert', result);
+            })
+            .fail(err =>
+                console.log(err));
+
+
+
     </script>
 </body>
 
